src/scss/themes/satellite.scss
/* ... */
.ais-RefinementList-checkbox:focus,
.ais-GeoSearch-input:focus {
  outline: currentcolor none medium;
}

.ais-RefinementList-item--selected .ais-RefinementList-checkbox:focus,
.ais-GeoSearch-input:checked:focus {
  box-shadow: rgba($grey900, 0.05) 0 1px 0 0 inset, currentcolor 0 0 0 1px;
}

/**
 * NumericMenu
 */

.ais-NumericMenu-label {
  align-items: center;
  cursor: pointer;
  display: flex;
}

.ais-NumericMenu-radio {
  appearance: none;
  background: $white;
  border: 1px solid $grey200;
  border-radius: 50%;
  box-shadow: inset 0 1px 4px 0 rgba($grey500, 0.3);
  height: 16px;
  margin: 0 0.5rem 0 0;
  outline: 0;
  position: relative;
  width: 16px;
}

.ais-NumericMenu-radio:checked,
.ais-NumericMenu-radio:focus {
  border-color: $nebula600;
  box-shadow: 0 1px 0 0 rgba($grey900, 0.05);
}

.ais-NumericMenu-radio:focus {
  box-shadow: 0 0 0 1px $nebula600, 0 1px 0 0 rgba($grey900, 0.05);
}

.ais-NumericMenu-radio:checked:after {
  background: $nebula600;
  border-radius: 50%;
  bottom: 4px;
  content: '';
  left: 4px;
  position: absolute;
  right: 4px;
  top: 4px;
}

/**
 * HierarchicalMenu
 */

.ais-HierarchicalMenu-list .ais-HierarchicalMenu-list {
  margin-left: 1.5rem;
}

.ais-HierarchicalMenu-link::before {
  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23b6b7d5%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpolyline%20points%3D%2218%2015%2012%209%206%2015%22%3E%3C%2Fpolyline%3E%3C%2Fsvg%3E');
  background-repeat: no-repeat;
  content: '';
  display: inline-block;
  height: 1rem;
  margin-right: 0.5rem;
  user-select: none;
  width: 1rem;
}

.ais-HierarchicalMenu-item--selected > .ais-HierarchicalMenu-link::before {
  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%235468ff%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpolyline%20points%3D%226%209%2012%2015%2018%209%22%3E%3C%2Fpolyline%3E%3C%2Fsvg%3E');
}

/**
 * RatingMenu
 */

.ais-RatingMenu-starIcon {
  margin-right: 0.25rem;
}

.ais-RatingMenu-starIcon {
  fill: $grey600;
  position: relative;
  width: 16px;
}

.ais-RatingMenu-item--disabled .ais-RatingMenu-starIcon {
  fill: $grey300;
}

.ais-RatingMenu-item--disabled .ais-RatingMenu-count,
.ais-RatingMenu-item--disabled .ais-RatingMenu-label {
  color: $grey300;
}

/**
 * ClearRefinements
 */

.ais-ClearRefinements-button {
  width: 100%;
}

/**
 * CurrentRefinements
 */

.ais-CurrentRefinements-list {
  display: inline-grid;
  gap: 1rem;
  grid-auto-flow: column;
}

.ais-CurrentRefinements-item {
  background-color: $grey100;
  border: 1px solid $grey300;
  border-radius: 3px;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5;
  min-height: 1.5rem;
  padding: 0.05rem 0.5rem;
}

.ais-CurrentRefinements-category {
  display: flex;
  margin-left: 0.5rem;
}

.ais-CurrentRefinements-delete {
  color: $grey400;
  height: 100%;
  margin-left: 0.25rem;
  outline-width: 0;
}

/**
 * ToggleRefinement
 */

.ais-ToggleRefinement-label {
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
}

.ais-ToggleRefinement-checkbox {
  appearance: none;
  background: rgba(#414247, 0.08);
  background: $grey100;
  border-radius: 9999px;
  box-shadow: inset 0 1px 4px 0 rgba($grey500, 0.4);
  height: 18px;
  pointer-events: none;
  position: relative;
  width: 32px;
}

.ais-ToggleRefinement-checkbox:checked {
  background: $nebula600;
  box-shadow: inset 0 1px 4px 0 rgba($grey900, 0.1);
}

.ais-ToggleRefinement-checkbox:focus {
  outline: 0;
}

.ais-ToggleRefinement-checkbox::after {
  background: linear-gradient(-180deg, $white, $grey100);
  border-radius: 9999px;
  box-shadow: 1px 1px 1px 0 rgba($grey900, 0.05);
  content: '';
  height: 16px;
  left: 1px;
  position: absolute;
  top: 1px;
  transition: all 100ms ease-in-out;
  width: 16px;
}

.ais-ToggleRefinement-checkbox:checked::after {
  transform: translateX(14px);
}

/**
 * RangeInput
 */

.ais-RangeInput-input {
  align-items: center;
  background-color: $white;
  border: 1px solid $grey200;
  border-radius: 3px;
  box-shadow: inset 0 1px 4px 0 rgba($grey500, 0.3);
  caret-color: $grey600;
  color: $grey900;
  cursor: text;
  display: flex;
  flex: 1;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 1.25rem;
  min-width: 0;
  overflow: hidden;
  padding: 0 1rem;
  position: relative;
}

.ais-RangeInput-input:focus {
  border-color: $nebula600;
  box-shadow: 0 1px 0 0 rgba($grey900, 0.05);
  outline: 0;
}

.ais-RangeInput-separator {
  margin: 0 0.5rem;
}

.ais-RangeInput-submit {
  margin-left: 0.5rem;
}

/**
 * RangeSlider
 */

.ais-RangeSlider .rheostat {
  margin: 40px 6px;
}

.ais-RangeSlider .rheostat-horizontal {
  cursor: pointer;
  width: calc(100% - 15px);
}

.ais-RangeSlider .rheostat-background {
  background-color: transparent;
  border: none;
  border-radius: 3px;
  box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.1),
    0 0.5px 0 0 rgba(255, 255, 255, 0.05);
  height: 4px;
}

.ais-RangeSlider .rheostat-progress {
  background-color: $nebula600;
  border-radius: 3px;
  height: 4px;
  max-width: 100%;
  top: 0;
}

.ais-RangeSlider .rheostat-tooltip {
  font-weight: bold;
  user-select: none;
}

.ais-RangeSlider .rheostat-handle {
  background-color: $white;
  background-image: linear-gradient(-180deg, $white, $grey50);
  border: 1px solid $grey200;
  border-radius: 2px;
  box-shadow: 0 1px 0 0 rgba($grey900, 0.05);
  height: 24px;
  margin-left: -6px;
  top: -11px;
  width: 12px;
}
/* ... */

